--- a/railway.toml
+++ b/railway.toml
@@ -4,4 +4,6 @@ buildCommand = "deno run -A main.js"
 
 [deploy]
 startCommand = "deno run -A main.js"
+healthcheckPath = "/"
+healthcheckTimeout = 100
 restartPolicyType = "never"
