--- a/railway.toml
+++ b/railway.toml
@@ -7,4 +7,4 @@ startCommand = "cargo build --release"
 startCommand = "cargo run --release"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
-restartPolicyType = "On-Failure"
+restartPolicyType = "never"
