--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,6 @@ axum = "0.7.5"
 tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["io"] }
 serde = { version = "1.0.198", features = ["derive"] }
-
+openfile = "2.1.0"
 rand = "0.8.5"
 lazy_static = "1.4.0"
